# esphome-components

./: .clang-tidy  .clang-tidy.hash  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .versions.yml  AGENTS.md  CODEOWNERS  Doxyfile  MANIFEST.in  README.md  THREAT_MODEL.md  components.list  platformio.ini  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c6  update_readme_badges.py
.ai/: instructions.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: codeowners.js  detect-tags.js
.github/workflows/: auto-label-pr.yml  ci-api-proto.yml  ci-clang-tidy-hash.yml  ci-docker.yml  ci-github-scripts.yml  ci-memory-impact-comment.yml  ci.yml  close-pr-from-fork-default-branch.yml  codeowner-approved-label-update.yml  codeowner-approved-label.yml  codeowner-review-request.yml  codeql.yml  daily-release.yml  dashboard-deprecation-comment.yml  esphome-compile.yml  external-component-bot.yml  hourly-release.yml  issue-codeowner-notify.yml  lock.yml  pr-title-check.yml  release.yml  stale.yml  status-check-labels.yml  sync-device-classes.yml
components/dht/: dht.cpp  dht.h
components/mqtt/: __init__.py  custom_mqtt_device.cpp  custom_mqtt_device.h  mqtt_alarm_control_panel.cpp  mqtt_backend_esp32.cpp  mqtt_backend_esp32.h  mqtt_backend_esp8266.h  mqtt_backend_libretiny.h  mqtt_binary_sensor.cpp  mqtt_binary_sensor.h  mqtt_button.cpp  mqtt_client.cpp  mqtt_client.h  mqtt_climate.cpp  mqtt_component.cpp  mqtt_component.h  mqtt_const.h  mqtt_cover.cpp  mqtt_cover.h  mqtt_date.cpp  mqtt_event.cpp  mqtt_fan.cpp  mqtt_light.cpp  mqtt_lock.cpp  mqtt_number.cpp  mqtt_select.cpp  mqtt_select.h  mqtt_sensor.cpp  mqtt_switch.cpp  mqtt_text.cpp  mqtt_text.h  mqtt_text_sensor.cpp  mqtt_time.cpp  mqtt_time.h  mqtt_update.cpp  mqtt_update.h  mqtt_valve.cpp
config/: minimal-dht.yaml  minimal-mqtt.yaml
docker/: Dockerfile  build.py  docker_entrypoint.sh
docker/test_configs/: bk72xx-arduino.yaml  esp32-arduino-esp-idf.yaml  esp32-arduino-platformio.yaml  esp32-idf-esp-idf.yaml  esp32-idf-platformio.yaml  esp8266-arduino.yaml  host.yaml  ln882x-arduino.yaml  nrf52.yaml  rp2040-arduino.yaml  rtl87xx-arduino.yaml
esphome/: __main__.py  address_cache.py  async_thread.py  automation.py  bundle.py  codegen.py  compiled_config.py  config.py  config_validation.py  const.py  coroutine.py  cpp_generator.py  cpp_helpers.py  cpp_types.py  enum.py  espidf_api.py  espota2.py  expression.py  external_files.py  framework_helpers.py  git.py  helpers.py  idf_component.yml  loader.py  mqtt.py  platformio_api.py  platformio_runner.py  preferences.py  resolver.py  storage_json.py  upload_targets.py  util.py  voluptuous_schema.py  web_server_ota.py  wizard.py  writer.py  yaml_util.py  zeroconf.py
esphome/analyze_memory/: __init__.py  cli.py  const.py  demangle.py  helpers.py  ram_strings.py  toolchain.py
esphome/build_gen/: espidf.py  platformio.py
esphome/components/: __init__.py
esphome/core/: __init__.py  alloc_helpers.cpp  alloc_helpers.h  application.cpp  application.h  automation.h  base_automation.h  build_info_data.h  color.cpp  color.h  component.cpp  component.h  component_iterator.cpp  component_iterator.h  config.py  gpio.cpp  (+46 more)
issues/: DHT22-ISSUE.txt  MQTT-ISSUE.txt
script/: analyze_component_buses.py  build_helpers.py  build_language_schema.py  check_import_time.py  ci-custom.py  ci_check_duplicate_test_ids.py  ci_memory_impact_comment.py  ci_memory_impact_extract.py  clang-tidy  clang_tidy_hash.py  cpp_benchmark.py  cpp_unit_test.py  determine-jobs.py  generate-esp32-boards.py  generate-rp2-boards.py  generate-rp2040-boards.py  helpers.py  helpers_zephyr.py  import_time_budget.json  lint-python  merge_component_configs.py  run-in-env.py  setup  setup_codspeed_lib.py  split_components_for_ci.py  stress_test_connect.py  test_build_components.py  test_helpers.py
tests/: dummy_main.cpp  testing_helpers.py
tools/: README.txt  esphome_release.py  update_readme_badges.py
(+4226 files in other folders)
